リファクタリング：.collect(Collectors.toList()) -> .toList()