@@ -71,7 +71,7 @@ public class SComparatorImpl implements SComparator {
             Pair<Integer> range = range(cells1, cells2, verticality);
             return IntStream.rangeClosed(range.a(), range.b())
                     .mapToObj(n -> Pair.of(n, n))
-                    .collect(Collectors.toList());
+                    .toList();
         };
     }
     
@@ -107,7 +107,7 @@ public class SComparatorImpl implements SComparator {
             
             return matcher.makePairs(cellsList1, cellsList2).stream()
                     .map(p -> p.map(i -> i + start))
-                    .collect(Collectors.toList());
+                    .toList();
         };
     }
     
@@ -193,7 +193,7 @@ public class SComparatorImpl implements SComparator {
                         return List.<CellReplica> of();
                     }
                 })
-                .collect(Collectors.toList());
+                .toList();
     }
     
     private static Pair<Integer> range(
@@ -326,15 +326,15 @@ public class SComparatorImpl implements SComparator {
         
         // 余剰行の収集
         List<Integer> redundantRows1 = rowPairs.stream()
-                .filter(Pair::isOnlyA).map(Pair::a).collect(Collectors.toList());
+                .filter(Pair::isOnlyA).map(Pair::a).toList();
         List<Integer> redundantRows2 = rowPairs.stream()
-                .filter(Pair::isOnlyB).map(Pair::b).collect(Collectors.toList());
+                .filter(Pair::isOnlyB).map(Pair::b).toList();
         
         // 余剰列の収集
         List<Integer> redundantColumns1 = columnPairs.stream()
-                .filter(Pair::isOnlyA).map(Pair::a).collect(Collectors.toList());
+                .filter(Pair::isOnlyA).map(Pair::a).toList();
         List<Integer> redundantColumns2 = columnPairs.stream()
-                .filter(Pair::isOnlyB).map(Pair::b).collect(Collectors.toList());
+                .filter(Pair::isOnlyB).map(Pair::b).toList();
         
         // 差分セルの収集
         List<Pair<CellReplica>> diffCells = extractDiffs(
@@ -389,6 +389,6 @@ public class SComparatorImpl implements SComparator {
                                 cell1 != null ? cell1 : CellReplica.empty(row1, column1),
                                 cell2 != null ? cell2 : CellReplica.empty(row2, column2));
             });
-        }).filter(Objects::nonNull).collect(Collectors.toList());
+        }).filter(Objects::nonNull).toList();
     }
 }
